--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon dist/index.js",
         "typescript": "tsc --watch",
-        "start": "node dist/index.js"
+        "start": "nodemon dist/index.js"
     },
     "keywords": [],
     "author": "",
